--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -11,7 +11,6 @@
     }
 
     #date {
-        justify-self: center;
         grid-column: 2/3;
        
     }
@@ -24,45 +23,51 @@
         
     }
     footer img {
-        width: 70px;
         margin-bottom: 5px;
-        margin-top: 5px;
+        margin-top: 5px; 
         grid-column: 1/2;
         grid-row: 1/2;
-        /* margin-right: 15px; */
+        align-self: center;
+        justify-self: start;
+        padding-top: 10px;
+        padding-left: 5px;
     }
     footer address {
         align-self: center;
-        margin-top: 50px;
-        text-align: center;
+        margin-top: 60px;
         grid-column: 1/3;
         grid-row: 1/2;
-        margin-left: 15px;
+        padding-left: 90px;
+        justify-self: start;
         
+    }
+    .email-phone-map {
+        align-self: center;
+        margin: 5px;
+
     }
     .email{
         grid-column: 3/4;
         grid-row: 1/2;
-       
         
     }
     .phone {
         grid-column: 3/4;
         grid-row: 1/span 1;
-        margin-top: 30px;
     }
     map {
         grid-column: 3/4;
         grid-row: 1/span 1;
-        margin-top: 55px;
+        margin-top: 0;
 
     }
-    footer h3 {
+    footer .siteName {
         grid-column: 1/3;
         grid-row: 1/2;
         align-self: center;
+        justify-self: baseline;
         margin-top: 20px;
-        margin-left: 15px;
+        margin-left: 90px;
         
     }
 
@@ -113,6 +118,7 @@
     .weather {
         grid-column: 1/3;
         grid-row: 5/6;
+        margin-right: 5px;
     } 
     
      
